# github-mcp

./: .flake8  .gitignore  .sonar-project.properties  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: github-mcp.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: sonarcloud.yml  workflow.yml
github_mcp/: __init__.py  registry.py  server.py
github_mcp/models/: common.py  content.py  issue.py  pull_request.py  repository.py
github_mcp/tools/: __init__.py  content.py  issues.py  pull_requests.py  repository.py
scripts/: init.sh  lint.sh  run_tests.sh  start_server.sh
tests/: test_server.py
